[tool.poetry]
name = "sample-helper-aws-appconfig"
version = "2.0.2"
description = "Sample helper library for AWS AppConfig"
authors = ["Amazon Web Services"]
maintainers = ["James Seward <sewardjm@amazon.co.uk>"]
license = "OSI Approved (Apache-2.0)"
readme = "README.md"
repository = "https://github.com/aws-samples/sample-python-helper-aws-appconfig"
keywords = ["aws", "appconfig"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]
packages = [ { include="appconfig_helper" } ]



[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.20.8"
botocore = "^1.23.8"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
boto3-stubs = "^1.20.8"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
freezegun = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
